# villagesql-server

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  MYSQL_VERSION  README  README.md  VERSION  config.h.cmake  iwyu_mappings.imp
extra/lz4/: CMakeLists.txt  my_xxhash.h
router/src/graalvm/src/: CMakeLists.txt  graalvm_common_context.cc  graalvm_common_context.h  graalvm_component.cc  graalvm_context_pool.cc  graalvm_context_pool.h  graalvm_db_interface.cc  graalvm_debug_context_handle.cc  graalvm_debug_context_handle.h  graalvm_javascript.cc  graalvm_javascript.h  graalvm_javascript_context.cc  graalvm_javascript_context.h  graalvm_plugin.cc  graalvm_service_handlers.cc  graalvm_service_handlers.h  graalvm_type_conversion.cc  graalvm_type_conversion.h  graalvm_value.cc
router/src/graalvm/src/database/: column.cc  column.h  query_attributes.cc  query_attributes.h  result.cc  result.h  row.cc  row.h  row_by_name.h  row_copy.cc  row_copy.h  session.cc  session.h
router/src/graalvm/src/file_system/: file_system_exceptions.h  polyglot_file_system.h
router/src/graalvm/src/languages/: polyglot_common_context.cc  polyglot_common_context.h  polyglot_garbage_collector.cc  polyglot_garbage_collector.h  polyglot_javascript.cc  polyglot_javascript.h  polyglot_language.cc  polyglot_language.h
router/src/graalvm/src/native_wrappers/: polyglot_array_wrapper.cc  polyglot_array_wrapper.h  polyglot_collectable.cc  polyglot_file_system_wrapper.cc  polyglot_file_system_wrapper.h  polyglot_function_wrapper.cc  polyglot_iterator_wrapper.cc  polyglot_iterator_wrapper.h  polyglot_map_wrapper.cc  polyglot_map_wrapper.h  polyglot_native_wrapper.h  polyglot_object_bridge.cc  polyglot_object_bridge.h  polyglot_object_wrapper.cc  polyglot_object_wrapper.h  polyglot_seekable_channel_wrapper.cc  polyglot_seekable_channel_wrapper.h
router/src/graalvm/src/objects/: polyglot_column.cc  polyglot_column.h  polyglot_date.cc  polyglot_date.h  polyglot_result.cc  polyglot_result.h  polyglot_row.cc  polyglot_row.h  polyglot_session.cc  polyglot_session.h
router/src/graalvm/src/polyglot_wrappers/: types_polyglot.cc  types_polyglot.h
router/src/graalvm/src/utils/: atomic_flag.h  native_value.cc  native_value.h  polyglot_error.cc  polyglot_error.h  polyglot_scope.cc  polyglot_scope.h  polyglot_store.cc  polyglot_store.h  polyglot_utils.cc  polyglot_utils.h  profiling.cc  profiling.h  utils_encoding.cc  utils_general.cc  utils_json.cc  utils_json.h  utils_path.cc  utils_path.h  utils_path_unix.cc  utils_path_win32.cc  utils_string.cc  utils_string.h
router/src/jit_executor/src/: CMakeLists.txt  jit_executor_common_context.cc  jit_executor_common_context.h  jit_executor_component.cc  jit_executor_context_pool.cc  jit_executor_context_pool.h  jit_executor_db_interface.cc  jit_executor_debug_context_handle.cc  jit_executor_debug_context_handle.h  jit_executor_javascript.cc  jit_executor_javascript.h  jit_executor_javascript_context.cc  jit_executor_javascript_context.h  jit_executor_plugin.cc  jit_executor_service_handlers.cc  jit_executor_service_handlers.h  jit_executor_type_conversion.cc  jit_executor_type_conversion.h  jit_executor_value.cc
router/src/jit_executor/src/database/: column.h  query_attributes.cc  query_attributes.h  result.cc  result.h  row.cc  row.h  row_by_name.h  row_copy.h  session.cc  session.h
router/src/jit_executor/src/languages/: polyglot_common_context.cc  polyglot_common_context.h  polyglot_garbage_collector.cc  polyglot_garbage_collector.h  polyglot_javascript.h  polyglot_language.cc  polyglot_language.h
router/src/jit_executor/src/native_wrappers/: polyglot_array_wrapper.h  polyglot_collectable.cc  polyglot_collectable.h  polyglot_file_system_wrapper.cc  polyglot_file_system_wrapper.h  polyglot_function_wrapper.cc  polyglot_function_wrapper.h  polyglot_iterator_wrapper.h  polyglot_map_wrapper.cc  polyglot_map_wrapper.h  polyglot_native_wrapper.h  polyglot_object_bridge.cc  polyglot_object_bridge.h  polyglot_object_wrapper.cc  polyglot_object_wrapper.h  polyglot_seekable_channel_wrapper.h
router/src/jit_executor/src/objects/: polyglot_column.cc  polyglot_column.h  polyglot_date.cc  polyglot_date.h  polyglot_result.cc  polyglot_result.h  polyglot_row.cc  polyglot_row.h  polyglot_session.cc  polyglot_session.h
router/src/jit_executor/src/polyglot_wrappers/: types_polyglot.h
router/src/jit_executor/src/utils/: atomic_flag.h  polyglot_api_clean.h  polyglot_error.cc  polyglot_error.h  polyglot_utils.cc  polyglot_utils.h  profiling.h  utils_encoding.cc  utils_encoding.h  utils_general.cc  utils_general.h  utils_json.cc  utils_json.h  utils_path.h  utils_path_unix.cc  utils_path_win32.cc  utils_string.h  utils_system.cc  utils_system.h
router/src/mysql_rest_service/src/: CMakeLists.txt  mysql_rest_service_plugin.cc  mysql_rest_service_plugin_config.cc  mysql_rest_service_plugin_config.h
router/src/mysql_rest_service/src/collector/: counted_mysql_session.cc  mysql_cache_manager.cc  mysql_fixed_pool_manager.cc
router/src/mysql_rest_service/src/helper/: media_detector.cc  media_type.cc  mysql_column_types.cc  mysql_numeric_value.cc  task_control.h
router/src/mysql_rest_service/src/helper/digester/: sha256_digest.cc
router/src/mysql_rest_service/src/helper/json/: jvalue.cc  merge.cc  to_sqlstring.cc  to_string.cc
router/src/mysql_rest_service/src/helper/token/: jwt.cc
router/src/mysql_rest_service/src/mrs/: endpoint_configuration.h  endpoint_manager.cc  endpoint_manager.h  gtid_manager.h  object.cc  object.h  object_schema.cc  object_schema.h  object_static_file.cc  object_static_file.h  router_observation_entities.cc  router_observation_entities.h
router/src/mysql_rest_service/src/mrs/authentication/: auth_handler_factory.cc  auth_handler_factory.h  authorize_manager.cc  mysql_handler.cc  mysql_handler.h  oauth2_facebook_handler.cc  (+14 more)
router/src/routing_guidelines/src/: CMakeLists.txt  guidelines_schema.h  parser.yy  routing_guidelines.cc  routing_simulator.cc  routing_simulator.h  rpn.cc  rpn.h  rules_parser.cc  rules_parser.h  utils.cc  utils.h
(+7735 files in other folders)
